[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vec2sent"]

# This moves the contents of src/external into src/vec2sent during build
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel.force-include]
"src/external" = "src/vec2sent"

[project]
name = "vec2sent"
version = "0.1.0"
description = "Generate sentences from embeddings and evaluate the results."
authors = [
    { name="Martin Kerscher" },
]
requires-python = "<3.8"
dependencies = [
    "bpemb>=0.3.5",
    "fastBPE>=0.0.0",
    "gensim==3.4.0",
    "nltk==3.4.1",
    "numpy>=1.17.1",
    "pytorch-transformers==1.1.0",
    "laserembeddings",
    "scikit-learn==1.0.2",
    "sentence-transformers==0.2.2",
    "torch==1.1.0",
    "tensorflow==1.15.0",
    "protobuf==3.14.0",
    "pandas==1.2.0",
    "tqdm==4.42.1",
    "huggingface-hub>=0.16.4",
    "sent2vec @ git+https://github.com/epfml/sent2vec.git",
    "pyemd==0.5.1",
    "pytorch-pretrained-bert==0.6.2",
    "platformdirs",
    "gdown==4.7.3",
    "requests",
]

[project.optional-dependencies]
evaluate_linguistic_features = [
    "spacy"
]

[project.scripts]
vec2sent_cleanup = "vec2sent.sentence_embeddings.cache_utils:cleanup"
vec2sent_generate = "vec2sent.lstm.generate:main"
vec2sent_evaluate = "vec2sent.evaluation.__main__:main"
vec2sent_arithmetic = "vec2sent.scripts.vector_arithmetic:main"